# axum-open-api

./: Cargo.toml
examples/: json_request.rs  path_param.rs  server.rs
src/: lib.rs
src/snapshots/: axum_open_api__tests__extract.snap  axum_open_api__tests__open_api_schema_request_parameters.snap  axum_open_api__tests__open_api_schema_response.snap
